--- a/pulse_dashboard/package.json
+++ b/pulse_dashboard/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "imooc-visualization",
+  "name": "pulse_dashboard",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,16 +10,19 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
-    "countup.js": "^2.6.2",
+    "countup.js": "^2.8.0",
     "echarts": "^5.4.2",
     "echarts-wordcloud": "^2.1.0",
-    "vue": "^3.5.12"
+    "less": "^4.2.1",
+    "sass-embedded": "^1.82.0",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.1.4",
+    "@vitejs/plugin-vue": "^5.2.1",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15",
-    "vite": "^5.4.10"
+    "tailwindcss": "^3.4.16",
+    "vite": "^6.0.1"
   }
 }
